--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    color: #fff;
+    font-size: 66px;
+    font-weight: lighter;
+}
+
 .aw-container {
     display: flex;
     flex-wrap: wrap;
@@ -30,10 +36,15 @@ a {
     align-items: center;
 }
 
+header {
+    position: relative;
+}
+
 header nav {
     position: fixed;
     width: 100%;
     background: rgba(0, 0, 0, .6);
+    z-index: 999;
 }
 
 header nav ul.aw-navigation {
@@ -84,7 +95,41 @@ header nav ul.aw-navigation li a:hover:after {
     align-items: center;
 }
 
+.aw-header-text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.aw-header-text .aw-arrow {
+    display: inline-block;
+    border: solid #fff;
+    padding: 10px;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+
 .aw-main-banner {
     display: block;
     width: 100%;
+}
+
+/* Animations */
+
+.aw-pulsate {
+    -webkit-animation: pulsate 3s ease-in-out;
+    -webkit-animation-iteration-count: infinite;
+    opacity: .3;
+}
+
+@-webkit-keyframes pulsate {
+    0% {opacity: 0.3}
+    50% {opacity: 1}
+    100% {opacity: .3}
 }
