--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,13 @@ header {
 header nav {
     position: fixed;
     width: 100%;
-    background: rgba(0, 0, 0, .6);
     z-index: 999;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+nav.aw-nav-background {
+    background: rgba(0, 0, 0, .6);
 }
 
 header nav ul.aw-navigation {
@@ -229,22 +234,23 @@ header nav ul.aw-navigation li a:hover:after {
 
 .aw-testimonials-container ul li{
     min-width: 100%;
+    width: 30%;
     display: flex;
     justify-content: center;
 }
 
 .aw-testimonial {
-    display: flex;
     flex-wrap: wrap;
     align-items: center;
     padding: 20px 10px;
+    max-width: 600px;
 }
 
 
 .aw-testimonial-text {
-    width: 80%;
     padding: 10px;
     font-style: italic;
+    text-align: center;
 }
 
 
@@ -273,18 +279,127 @@ header nav ul.aw-navigation li a:hover:after {
     cursor: pointer;
     position: absolute;
     top: 50%;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .aw-testimonials-container .aw-arrow.aw-arrow-left {
     -webkit-transform: rotate(135deg);
     transform: rotate(135deg);
-    left: 10px;
+    left: 50px;
 }
 
 .aw-testimonials-container .aw-arrow.aw-arrow-right {
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
-    right: 10px;
+    right: 50px;
+}
+
+.aw-testimonials-container .aw-arrow:hover{
+    padding: 20px;
+    top: 50%;
+}
+
+/* Contact */
+
+#contact {
+    background: #f8f8f8;
+}
+
+#contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+#contact form input:not([type="submit"]),
+#contact form textarea
+{
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 20px;
+    border: solid 1px #ccc;
+    font-size: 14px;
+    outline: none;
+}
+
+#contact form textarea {
+    height: 150px;
+    resize: none;
+}
+
+#contact form *::-webkit-input-placeholder {
+    color: #ccc;
+    font-style: italic;
+}
+
+#contact form *::-moz-placeholder {
+    color: #ccc;
+    font-style: italic;
+}
+
+#contact form *:-ms-input-placeholder {
+    color: #ccc;
+    font-style: italic;
+}
+
+#contact form input[type="submit"] {
+    width: 100%;
+    border: none;
+    padding: 20px;
+    color: #fff;
+    background-color: #d22c2c;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: inset 0 -5px 5px 0px #b52525;
+    outline: none;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+#contact form input[type="submit"]:hover {
+    box-shadow: inset 0 -5px 5px 0px #821e1e;
+}
+
+
+/* Footer */
+
+footer {
+    background-color: #444;
+}
+
+footer .aw-logo {
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
+}
+
+footer .aw-social-icons {
+    display: flex;
+    list-style-type: none;
+
+}
+
+footer .aw-social-icons li {
+    margin-left: 35px;
+}
+
+footer .aw-social-icons li a {
+    color: #fff;
+    font-size: 25px;
+    display: flex;
+    opacity: 0.5;
+    -webkit-transition: all .3s ease;
+    transition: all .6s ease;
+}
+
+footer .aw-social-icons li a:hover{
+    opacity: 1;
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+
 }
 
 /* Animations */
@@ -294,7 +409,6 @@ header nav ul.aw-navigation li a:hover:after {
     -webkit-animation-iteration-count: infinite;
     opacity: .3;
 }
-
 
 @-webkit-keyframes pulsate {
     0% {opacity: 0.3}
